Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,4 +1,4 @@
 [access]
 	inheritFrom = dmaap
 [project]
-	description = It is a docker container that implements the dbcapi. It optionally can be deployed in a persistent mode which relies on PGaaS, in which case multiple containers can also be deployed for scale/availabliity.
+	description = It is a docker container that implements the dbcapi. It optionally can be deployed in a persistent mode which relies on PGaaS, in which case multiple containers can also be deployed for scale/availablity.
