--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <groupId>org.onap.oparent</groupId>
     <artifactId>oparent</artifactId>
     <version>0.1.0</version>
+    <relativePath/>
   </parent>
   <build>
     <finalName>buscontroller</finalName>
