Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,3 +2,5 @@
 	inheritFrom = dmaap
 [project]
 	description = It is a docker container that implements the dbcapi. It optionally can be deployed in a persistent mode which relies on PGaaS, in which case multiple containers can also be deployed for scale/availablity.
+[access "refs/*"]
+	read = group GitHub Replication
