--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,22 @@
           </execution>
         </executions>
       </plugin>
+	  <plugin>
+        <!--Special goal to populate target/libs with dependencies to place in docker image -->
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-dependency-plugin</artifactId>
+	    <executions>
+	      <execution>
+		    <phase>install</phase>
+		    <goals>
+		      <goal>copy-dependencies</goal>
+		    </goals>
+		    <configuration>
+		      <outputDirectory>${project.build.directory}/dependency</outputDirectory>
+		    </configuration>
+	      </execution>
+       </executions>
+      </plugin>
 
     </plugins>
     <pluginManagement>
@@ -56,9 +72,10 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
                     <versionRange>[2.10,)</versionRange>
-                    <goals>
-                      <goal>copy-dependencies</goal>
-                    </goals>
+					    <phase>install</phase>
+                        <goals>
+                          <goal>copy-dependencies</goal>
+                        </goals>
                   </pluginExecutionFilter>
                   <action>
                     <ignore/>
